# kirby

./: .gitignore  LICENSE  README.md  clear.sh  inference.py  pyproject.toml  train.py  util.py  util.sh
cli/: .gitignore  pyproject.toml
cli/src/cli/: __init__.py  initialize.py  train.py
cli/src/cli/_util/: _audio.py  _device.py  _dict.py
cli/src/cli/util/: __init__.py  _aio.py  _default.py  _hash.py
cli/src/cli/util/_io/: _dict_io.py
cli/src/cli/util/io/: __init__.py
docs/: DEVELOPMENT.md  TODO.md
kirby-acc/: README.md
kirby-cli/: README.md  inference.py  pyproject.toml  train.py  training.json.example
kirby-cli/src/kirby_cli/: __init__.py  inference.py  training.py
kirby-cli/src/kirby_cli/_util/: __init__.py  _dict.py  _hash.py
kirby-core/: README.md  pyproject.toml
kirby-core/src/kirby_core/: __init__.py  training.py
kirby-core/src/kirby_core/_util/: _deterministic.py  _meta.py
kirby-core/src/kirby_core/impl/loss/: __init__.py  dc.py  esr.py
kirby-core/src/kirby_core/impl/model/: __init__.py  lstm.py
kirby-core/src/kirby_core/impl/optimizer/: __init__.py  adam.py
kirby-core/src/kirby_core/impl/scheduler/: __init__.py  plateau.py
kirby-core/src/kirby_core/impl/trainer/: __init__.py  rnn.py
kirby-core/src/kirby_core/protocol/_config/: _config.py  _item_config.py  _train_config.py
kirby-core/src/kirby_core/protocol/impl/: loss_base.py  model_base.py  optimizer_base.py  scheduler_base.py  trainer_base.py
kirby-plugin/: README.md
src/kirby/: __init__.py  inference.py  train.py
src/kirby/_util/: __init__.py  _cond.py  _meta.py
src/kirby/impl/: __init__.py
src/kirby/impl/loss/: __init__.py  dc.py  esr.py
src/kirby/impl/model/: __init__.py  lstm.py
src/kirby/impl/optimizer/: __init__.py  adam.py
src/kirby/impl/scheduler/: __init__.py  plateau.py
src/kirby/impl/trainer/: __init__.py  rnn.py
src/kirby/protocol/: __init__.py
src/kirby/protocol/_config/: _train_config.py
src/kirby/protocol/config/: __init__.py  _data.py  _general_config.py
src/kirby/protocol/impl/: __init__.py  loss_base.py  model_base.py  optimizer_base.py  scheduler_base.py  trainer_base.py
src/kirby/util/: __init__.py  result.py
