[project]
name            = 'kirby'
version         = '0.1.0'
description     = 'Library for black-box modeling of complex non-linear audio system'
authors         = [
    { name = 'Hwanhee Kim'  , email = 'kimhappy@hanyang.ac.kr'     },
    { name = 'Hyunchan Chun', email = 'hyunchan0408@hanyang.ac.kr' },
]
license         = 'MIT'
readme          = 'README.md'
requires-python = '>=3.12,<3.13'
dependencies    = []

[build-system]
requires      = ['hatchling']
build-backend = 'hatchling.build'
