[project]
name            = 'kirby'
version         = '0.1.0'
description     = 'A library for black-box modeling of complex non-linear audio systems'
authors         = [
    { name = 'Hwanhee Kim'  , email = 'kimhappy@hanyang.ac.kr'     },
    { name = 'Hyunchan Chun', email = 'hyunchan0408@hanyang.ac.kr' }
]
license         = 'MIT'
readme          = 'README.md'
requires-python = '>=3.9,<3.10'
dependencies    = [
    'numpy>=2.0.2'     ,
    'python-box>=7.3.2',
    'torch>=2.6.0'
]

[build-system]
requires      = ['hatchling']
build-backend = 'hatchling.build'
